 
 Awaiting Future Developments:
  Show more extra info in tapatalk (ie likes,followers) - TTv4
  signature maybe with future tapatalk plugin update - edit: works for some now
  reputation maybe with future tapatalk plugin update

Current Version : 1.0.10

*** 1.0.10 ***

Added activity splash when getting forum list from online database
Changed database interface code to handle the new database
Added category to info when displaying forums from the online database

*** 1.0.9 ***

Fix for adding forums via Parser Browser that require login and/or have captcha
Now asks if forum requires login before checking for Parser Browser compatibility (then asks for user/pass if you say yes)
Parser Browser: Added info dialogs for normal and generic methods when adding a forum that explain the possible limitations
Added 'View Forum Info' to forums view context menu

*** 1.0.8 ***

Tapatalk: Signatures will now show in posts when available (ie xbmchub.com)
Added settings option 'Hide Signatures In Posts'
Made user info windows scrollable
Tapatalk: How long ago on activity now shows 0s ago when less than one second ago
Improved logo detecting when adding a forum
Removed Parser Browser from experimental and integrated it into normal 'Add Forum' process
Removed Boxee from the included forums and added it to the online database
Removed old VBulletin parserbrowser code

Experimental:
 - FB now passes the web session to WebViewer preserving logged in status and such
 - Fix for relative URLs in posts not passing properly to WebViewer
 - VBulletin: Full post formatting, PM create/delete and subscribe/unSubscribe threads/forums
 - Fix for over-eager error message detection after creating a post

*** 1.0.7 ***

Tapatalk: "Get Online Users" availability is now checked in the initial forum config info
Tapatalk: Now checks if guest is ok before displaying forums, and if not, and no login details are set, asks if you want to set them now