@@ -145,6 +145,25 @@
     <string id="30252">Create New Thread</string>
     <string id="30253">Send PM to %s</string>
     
+    <string id="30500">Miscellaneous</string>
+    <string id="30501">Audio/Video Software &amp; Technology</string>
+    <string id="30502">Science &amp; Technology</string>
+    <string id="30503">Automotive/Motorcycle/Powersports</string>
+    <string id="30504">Pets</string>
+    <string id="30505">Wildlife &amp; Nature</string>
+    <string id="30506">Games (Video/Board/Etc)</string>
+    <string id="30507">Sports (Fans)</string>
+    <string id="30508">Outdoor &amp; Travel</string>
+    <string id="30509">Society &amp; Culture</string>
+    <string id="30510">Food &amp; Dining</string>
+    <string id="30511">Computers &amp; Software</string>
+    <string id="30512">Gadgets &amp; Phones</string>
+    <string id="30513">Hobbies &amp; Collecting</string>
+    <string id="30514">Sports (Recreational)</string>
+    <string id="30515">Internet</string>
+    <string id="30516">Entertainment (TV/Movies/Music)</string>
+
+    <string id="30515">Internet</string>					
     <string id="3000">Prev</string> <!-- Previous -->
     <string id="3001">Next</string>
     <string id="3002">Post Reply</string>
